@@ -415,10 +415,10 @@ static int	process_active_checks(char *server, unsigned short port)
 				p_count = 0;
 				while( SUCCEED == (ret = process_log(filename, &active_metrics[i].lastlogsize, &value)) )
 				{
-					if( !value ) /* EOF */	break;
+					if (!value) /* EOF */
+						break;
 
-					if( !pattern || NULL != zbx_regexp_match(value, pattern, NULL) )
-					{
+					if (!pattern || NULL != zbx_regexp_match(value, pattern, NULL)) {
 						send_err = send_value(
 									server,
 									port,
@@ -487,8 +487,10 @@ static int	process_active_checks(char *server, unsigned short port)
 				p_count = 0;
 				while( SUCCEED == (ret = process_eventlog(filename,&active_metrics[i].lastlogsize, &timestamp, &source, &severity, &value)) )
 				{
-					if( value  && (!pattern || NULL != zbx_regexp_match(value, pattern, NULL)) )
-					{
+					if (!value) /* EOF */
+						break;
+
+					if (!pattern || NULL != zbx_regexp_match(value, pattern, NULL)) {
 						send_err = send_value(
 									server,
 									port,
@@ -624,7 +626,6 @@ ZBX_THREAD_ENTRY(active_checks_thread, args)
 
 	while(ZBX_IS_RUNNING)
 	{
-
 		zbx_setproctitle("processing active checks");
 
 		if(process_active_checks(activechk_args.host, activechk_args.port) == FAIL)
